--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,11 @@ repositories {
 }
 
 dependencies {
+
+    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
