--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 
 dependencies {
 
-    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
