--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,10 @@ dependencies {
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.18.3'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
+    testCompile 'org.dbunit:dbunit:2.5.4'
+
+
 }
