--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,27 @@
+//buildscript {
+//    repositories {
+//        maven {
+//            url "https://maven.eveoh.nl/content/repositories/releases"
+//        }
+//    }
+//
+//    dependencies {
+//        classpath "nl.eveoh:gradle-aspectj:1.6"
+//    }
+//}
+//project.ext {
+//    aspectjVersion = '1.9.1'
+//}
+//
+//apply plugin: 'aspectj'
+apply plugin: 'idea'
+apply plugin: 'application'
+apply plugin: 'java'
+
+//mainClassName = 'lv.javaguru.courses.ingenico.lecture8.aspects.AspectMain'
 group 'lv.javaguru'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
@@ -14,8 +34,10 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
-
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.1'
+
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.18.3'
